--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 .claude
 
 onnx/wav2vec2-espeak-*/
+onnx/zipa-repo/
+onnx/zipa-small-ctc/
+onnx/zipa-small-ctc-int8/
+onnx/zipa-small-ctc-onnx/
 
 # Node.js
 node_modules/
