--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "transformers",
     "torch",
     "onnx",
+    "onnxruntime",
+    "huggingface_hub",
+    "sentencepiece",
 ]
 
 [build-system]
