upload_to_hf added and executed.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ onnx/zipa-small-ctc-int8/
 onnx/zipa-small-ctc-onnx/
 onnx/zipa-download/
 onnx/zipa-onnx/
+onnx/zipa-export*
 
 # Node.js
 node_modules/
