--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "fastest-levenshtein": "^1.0.16",
-    "onnxruntime-web": "^1.23.2"
+    "flac-bindings": "^4.1.0",
+    "onnxruntime-node": "^1.23.2",
+    "onnxruntime-web": "^1.23.2",
+    "wav-encoder": "^1.3.0"
   }
 }
