different pre-processing, better results.

--- a/tests/data/de/Apfel/Apfel-edge-tts-conrad.flac.yaml
+++ b/tests/data/de/Apfel/Apfel-edge-tts-conrad.flac.yaml
@@ -2,5 +2,5 @@ word: Apfel
 lang: de
 source: edge-tts
 voice: de-DE-ConradNeural
-recognized_ipa: a p f e
-similarity: 0.8
+recognized_ipa: a p f e l
+similarity: 1
