--- a/tests/data/de/Schmetterling/Schmetterling-human-guettli.flac.yaml
+++ b/tests/data/de/Schmetterling/Schmetterling-human-guettli.flac.yaml
@@ -3,5 +3,5 @@ lang: de
 source: human
 speaker: guettli
 notes: Original test recording
-recognized_ipa: m e ɪ t a l i ŋ
-similarity: 0.94
+recognized_ipa: ʃ m e ː t ɐ l ɪ ŋ
+similarity: 1
