--- a/tests/data/de/Schlüssel/Schlüssel-edge-tts-conrad.flac.yaml
+++ b/tests/data/de/Schlüssel/Schlüssel-edge-tts-conrad.flac.yaml
@@ -2,5 +2,5 @@ word: Schlüssel
 lang: de
 source: edge-tts
 voice: de-DE-ConradNeural
-recognized_ipa: ʒ i l ə s ɛ
-similarity: 0.81
+recognized_ipa: ʒ ə i l ə s ɛ
+similarity: 0.83
