--- a/tests/data/de/Hund/Hund-edge-tts-conrad.flac.yaml
+++ b/tests/data/de/Hund/Hund-edge-tts-conrad.flac.yaml
@@ -2,5 +2,5 @@ word: Hund
 lang: de
 source: edge-tts
 voice: de-DE-ConradNeural
-recognized_ipa: h ʊ n t
-similarity: 1
+recognized_ipa: h ʊ n t s
+similarity: 0.8
