--- a/tests/data/de/Katze/Katze-edge-tts-conrad.flac.yaml
+++ b/tests/data/de/Katze/Katze-edge-tts-conrad.flac.yaml
@@ -2,5 +2,5 @@ word: Katze
 lang: de
 source: edge-tts
 voice: de-DE-ConradNeural
-recognized_ipa: k ɑ t s e
-similarity: 1
+recognized_ipa: k a t s e
+similarity: 0.98
