--- a/tests/data/en/Apple/Apple-edge-tts-guy.flac.yaml
+++ b/tests/data/en/Apple/Apple-edge-tts-guy.flac.yaml
@@ -2,5 +2,5 @@ word: Apple
 lang: en
 source: edge-tts
 voice: en-US-GuyNeural
-recognized_ipa: æ p ə l ̴
-similarity: 1
+recognized_ipa: æ p o l
+similarity: 0.98
