--- a/tests/data/en/Flower/Flower-edge-tts-guy.flac.yaml
+++ b/tests/data/en/Flower/Flower-edge-tts-guy.flac.yaml
@@ -2,5 +2,5 @@ word: Flower
 lang: en
 source: edge-tts
 voice: en-US-GuyNeural
-recognized_ipa: f l ̴ a ʊ ɜ ˞
-similarity: 0.83
+recognized_ipa: f l a ʊ ˞
+similarity: 0.67
