--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/js-yaml": "^4.0.9",
     "bootstrap": "^5.3.8",
     "fastest-levenshtein": "^1.0.16",
     "flac-bindings": "^4.1.0",
+    "js-yaml": "^4.1.1",
     "onnxruntime-node": "^1.23.2",
     "onnxruntime-web": "^1.23.2",
     "wav-encoder": "^1.3.0"
