fix bug in comparison.
fix add word makes vscode crash.

re-use code, remove voice Conrad Schlüssel (too fast)

use other voice, which speaks more clearly.

less penalty for insert/delete

Hund, but wrong prec.

new audio

Hund: khundi to hund. But some regresssions.

--- a/tests/data/de/Auto/Auto-edge-tts-conrad.flac.yaml
+++ b/tests/data/de/Auto/Auto-edge-tts-conrad.flac.yaml
@@ -2,5 +2,5 @@ word: Auto
 lang: de
 source: edge-tts
 voice: de-DE-ConradNeural
-recognized_ipa: awtoː
-similarity: 0.95
+recognized_ipa: awto
+similarity: 0.96
