--- a/tests/data/de/Hund/Hund-edge-tts-conrad.flac.yaml
+++ b/tests/data/de/Hund/Hund-edge-tts-conrad.flac.yaml
@@ -2,5 +2,5 @@ word: Hund
 lang: de
 source: edge-tts
 voice: de-DE-ConradNeural
-recognized_ipa: hʊnts
-similarity: 0.8
+recognized_ipa: hʊnt
+similarity: 1
