--- a/tests/data/de/Schmetterling/Schmetterling-human-guettli.flac.yaml
+++ b/tests/data/de/Schmetterling/Schmetterling-human-guettli.flac.yaml
@@ -3,5 +3,5 @@ lang: de
 source: human
 speaker: guettli
 notes: Original test recording
-recognized_ipa: ʃmetɑrliŋ
-similarity: 0.87
+recognized_ipa: metɑrliŋ
+similarity: 0.85
