--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "noEmit": false,
     "outDir": "./dist-node",
+    "rootDir": ".",
     "declaration": true,
     "moduleResolution": "node"
   },
