--- a/tests/data/en/Banana/Banana-edge-tts-guy.flac.yaml
+++ b/tests/data/en/Banana/Banana-edge-tts-guy.flac.yaml
@@ -2,5 +2,5 @@ word: Banana
 lang: en
 source: edge-tts
 voice: en-US-GuyNeural
-recognized_ipa: vɑnænə
-similarity: 0.97
+recognized_ipa: vɑnæn
+similarity: 0.88
