--- a/tests/data/en/Bicycle/Bicycle-edge-tts-guy.flac.yaml
+++ b/tests/data/en/Bicycle/Bicycle-edge-tts-guy.flac.yaml
@@ -2,5 +2,5 @@ word: Bicycle
 lang: en
 source: edge-tts
 voice: en-US-GuyNeural
-recognized_ipa: baɪsɪkəl̴
+recognized_ipa: baɪsɪkəl
 similarity: 1
