--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.58.0",
     "@types/node": "^25.1.0",
+    "@types/pouchdb": "^6.4.2",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "concurrently": "^9.2.1",
@@ -48,6 +49,8 @@
     "js-yaml": "^4.1.1",
     "onnxruntime-node": "^1.23.2",
     "onnxruntime-web": "^1.23.2",
+    "pouchdb-browser": "^9.0.0",
+    "pouchdb-find": "^9.0.0",
     "wav-encoder": "^1.3.0"
   }
 }
