to ipa improvements.

--- a/tests/data/de/Die_Rose/Die_Rose-Thomas.flac.yaml
+++ b/tests/data/de/Die_Rose/Die_Rose-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Die Rose
 lang: de
 source: Thomas
 timestamp: 20260210T081407
-recognized_ipa: diːhiːəɾoːzə
-similarity: 0.82
+recognized_ipa: diːhiːoːzə
+similarity: 0.89
