--- a/tests/data/de/Auto/Auto-Thomas.flac.yaml
+++ b/tests/data/de/Auto/Auto-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Auto
 lang: de
 source: Thomas
 timestamp: 20260201T131131
-recognized_ipa: ɑwt
-similarity: 0.82
+recognized_ipa: ɑwto
+similarity: 0.95
