--- a/tests/data/de/Fahrrad/Fahrrad-edge-tts-conrad.flac.yaml
+++ b/tests/data/de/Fahrrad/Fahrrad-edge-tts-conrad.flac.yaml
@@ -2,5 +2,5 @@ phrase: Fahrrad
 lang: de
 source: edge-tts
 voice: de-DE-ConradNeural
-recognized_ipa: fɑɾɾɑt
-similarity: 0.86
+recognized_ipa: fɑɾɑt
+similarity: 0.8
