--- a/tests/data/de/Schmetterling/Schmetterling-human-guettli.flac.yaml
+++ b/tests/data/de/Schmetterling/Schmetterling-human-guettli.flac.yaml
@@ -3,5 +3,5 @@ lang: de
 source: human
 speaker: guettli
 notes: Original test recording
-recognized_ipa: metɑrliŋ
-similarity: 0.86
+recognized_ipa: metliŋ
+similarity: 0.82
