--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "test:slow:cached": "USE_GLOBAL_SETUP=1 RUN_SLOW_TESTS=1 playwright test",
     "test:voice": "RUN_SLOW_TESTS=1 playwright test tests/voice-selection.spec.js",
     "test:voice:cached": "USE_GLOBAL_SETUP=1 RUN_SLOW_TESTS=1 playwright test tests/voice-selection.spec.js",
-    "test:phrases": "tsc -p tsconfig.build.json && node tests/all-phrases.test.js",
     "lint": "eslint src",
     "typecheck": "tsc --noEmit",
-    "check": "./scripts/lint.sh && concurrently -n types,phrases,e2e -c cyan,yellow,magenta \"pnpm typecheck\" \"pnpm test:phrases\" \"pnpm test\""
+    "check": "./scripts/lint.sh && concurrently -n types,e2e -c cyan,magenta \"pnpm typecheck\" \"pnpm test\""
   },
   "keywords": [
     "pronunciation",
