--- a/tests/data/de/Das_Feuer_brennt/Das_Feuer_brennt-Thomas.flac.yaml
+++ b/tests/data/de/Das_Feuer_brennt/Das_Feuer_brennt-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Das Feuer brennt
 lang: de
 source: Thomas
 timestamp: 20260211T152545
-recognized_ipa: dasfɔʏərbrɛnnt
-similarity: 0.96
+recognized_ipa: dasfɔʏərbrɛnt
+similarity: 1
