--- a/tests/data/de/Der_Bus/Der_Bus-Thomas.flac.yaml
+++ b/tests/data/de/Der_Bus/Der_Bus-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Der Bus
 lang: de
 source: Thomas
 timestamp: 20260210T081949
-recognized_ipa: ehapos
-similarity: 0.86
+recognized_ipa: tehapos
+similarity: 0.89
