--- a/tests/data/de/Der_Fuchs/Der_Fuchs-Thomas.flac.yaml
+++ b/tests/data/de/Der_Fuchs/Der_Fuchs-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Der Fuchs
 lang: de
 source: Thomas
 timestamp: 20260210T080552
-recognized_ipa: deːɾfuːks
-similarity: 0.93
+recognized_ipa: deːfuks
+similarity: 0.92
