--- a/tests/data/de/Der_Hamster/Der_Hamster-Thomas.flac.yaml
+++ b/tests/data/de/Der_Hamster/Der_Hamster-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Der Hamster
 lang: de
 source: Thomas
 timestamp: 20260208T173641
-recognized_ipa: deːɾhaɾmstɛ
-similarity: 0.91
+recognized_ipa: deːhaɾmst
+similarity: 0.84
