--- a/tests/data/de/Der_Mann/Der_Mann-Thomas.flac.yaml
+++ b/tests/data/de/Der_Mann/Der_Mann-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Der Mann
 lang: de
 source: Thomas
 timestamp: 20260212T145653
-recognized_ipa: deːɐmann
-similarity: 0.93
+recognized_ipa: deːɐman
+similarity: 1
