--- a/tests/data/de/Die_Erdbeere/Die_Erdbeere-Thomas.flac.yaml
+++ b/tests/data/de/Die_Erdbeere/Die_Erdbeere-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Die Erdbeere
 lang: de
 source: Thomas
 timestamp: 20260211T212228
-recognized_ipa: diːɛːɐtbɛɾə
-similarity: 0.94
+recognized_ipa: diːɛːɐtbɛːɾə
+similarity: 0.95
