--- a/tests/data/de/Hund/Hund-Thomas.flac.yaml
+++ b/tests/data/de/Hund/Hund-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Hund
 lang: de
 source: Thomas
 timestamp: 20260202T163949
-recognized_ipa: hund
-similarity: 0.97
+recognized_ipa: undi
+similarity: 0.72
