--- a/tests/data/en/Apple/Apple-edge-tts-guy.flac.yaml
+++ b/tests/data/en/Apple/Apple-edge-tts-guy.flac.yaml
@@ -2,5 +2,5 @@ phrase: Apple
 lang: en
 source: edge-tts
 voice: en-US-GuyNeural
-recognized_ipa: æpol
-similarity: 0.98
+recognized_ipa: æpl
+similarity: 0.88
