--- a/tests/data/en/Banana/Banana-edge-tts-guy.flac.yaml
+++ b/tests/data/en/Banana/Banana-edge-tts-guy.flac.yaml
@@ -2,5 +2,5 @@ phrase: Banana
 lang: en
 source: edge-tts
 voice: en-US-GuyNeural
-recognized_ipa: vɑnæn
-similarity: 0.86
+recognized_ipa: vn
+similarity: 0.65
