--- a/tests/data/en/Bird/Bird-edge-tts-guy.flac.yaml
+++ b/tests/data/en/Bird/Bird-edge-tts-guy.flac.yaml
@@ -2,5 +2,5 @@ phrase: Bird
 lang: en
 source: edge-tts
 voice: en-US-GuyNeural
-recognized_ipa: bɜ˞d
-similarity: 0.86
+recognized_ipa: b˞d
+similarity: 0.88
