--- a/tests/data/en/Butterfly/Butterfly-edge-tts-guy.flac.yaml
+++ b/tests/data/en/Butterfly/Butterfly-edge-tts-guy.flac.yaml
@@ -2,5 +2,5 @@ phrase: Butterfly
 lang: en
 source: edge-tts
 voice: en-US-GuyNeural
-recognized_ipa: bətɜ˞fl̴aɪ
+recognized_ipa: bətɜ˞flaɪ
 similarity: 0.91
