--- a/tests/data/de/Erdbeere/Erdbeere-Thomas.flac.yaml
+++ b/tests/data/de/Erdbeere/Erdbeere-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Erdbeere
 lang: de
 source: Thomas
 timestamp: 20260212T145018
-recognized_ipa: eːhatbɛːə
-similarity: 0.84
+recognized_ipa: eːhatbɛːhə
+similarity: 0.91
