--- a/tests/data/de/Hund/Hund-Thomas.flac.yaml
+++ b/tests/data/de/Hund/Hund-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Hund
 lang: de
 source: Thomas
 timestamp: 20260202T163949
-recognized_ipa: undi
-similarity: 0.72
+recognized_ipa: hundi
+similarity: 0.88
