--- a/tests/data/de/Flugzeug/Flugzeug-Thomas2.flac.yaml
+++ b/tests/data/de/Flugzeug/Flugzeug-Thomas2.flac.yaml
@@ -1,6 +1,6 @@
 phrase: Flugzeug
 lang: de
-source: edge-tts
-voice: de-DE-ConradNeural
+source: Thomas2
+timestamp: 20260213T144121
 recognized_ipa: fluːktsɔʏk
 similarity: 1
