--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,13 @@
 {
   "printWidth": 100,
-  "proseWrap": "always"
+  "proseWrap": "always",
+  "plugins": ["prettier-plugin-svelte"],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
