--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "AI-powered pronunciation practice tool for German learners",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "playwright test",
+    "test": "playwright test --project=chromium --project=chromium-production",
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
     "test:report": "playwright show-report",
@@ -16,7 +16,7 @@
     "test:voice": "RUN_SLOW_TESTS=1 playwright test tests/voice-selection.spec.js",
     "test:voice:cached": "USE_GLOBAL_SETUP=1 RUN_SLOW_TESTS=1 playwright test tests/voice-selection.spec.js",
     "lint": "eslint src",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check": "./scripts/lint.sh && concurrently -n types,e2e -c cyan,magenta \"pnpm typecheck\" \"pnpm test\""
   },
   "keywords": [
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.58.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/escape-html": "^1.0.4",
     "@types/node": "^25.1.0",
     "@types/pouchdb": "^6.4.2",
@@ -40,12 +41,16 @@
     "eslint": "^9.39.2",
     "jscpd": "^4.0.8",
     "prettier": "^3.8.1",
+    "prettier-plugin-svelte": "^3.5.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.1"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@sveltejs/adapter-static": "^3.0.10",
+    "@sveltejs/kit": "^2.53.1",
+    "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@svouch/pouchdb": "0.0.1-0",
     "@types/js-yaml": "^4.0.9",
     "bootstrap": "^5.3.8",
@@ -56,6 +61,8 @@
     "js-yaml": "^4.1.1",
     "onnxruntime-node": "^1.23.2",
     "onnxruntime-web": "^1.24.2",
+    "svelte": "5.53.3",
+    "svelte-check": "^4.4.3",
     "wav-encoder": "^1.3.0"
   }
 }
