new words and french.

--- a/phrases-de.yaml
+++ b/phrases-de.yaml
@@ -1632,3 +1632,303 @@
     - ipa: /t͡siˈtʁoːnə/
       category: standard
   level: 334
+- phrase: Der Brokkoli
+  emoji: 🥦
+  ipas:
+    - ipa: /deːɐ̯ ˈbʁɔkoli/
+      category: standard
+  level: 917
+- phrase: Der Brokkoli ist grün
+  emoji: 🥦
+  ipas:
+    - ipa: /deːɐ̯ ˈbʁɔkoli ɪst ɡʁyːn/
+      category: standard
+  level: 896
+- phrase: Die Kiwi
+  emoji: 🥝
+  ipas:
+    - ipa: /diː ˈkiːvi/
+      category: standard
+  level: 63
+- phrase: Die Kiwi ist grün
+  emoji: 🥝
+  ipas:
+    - ipa: /diː ˈkiːvi ɪst ɡʁyːn/
+      category: standard
+  level: 470
+- phrase: Die Wassermelone
+  emoji: 🍉
+  ipas:
+    - ipa: /diː ˈvasɐmeloːnə/
+      category: standard
+  level: 667
+- phrase: Die Wassermelone ist groß
+  emoji: 🍉
+  ipas:
+    - ipa: /diː ˈvasɐmeloːnə ɪst ɡʁoːs/
+      category: standard
+  level: 771
+- phrase: Die Zwiebel
+  emoji: 🧅
+  ipas:
+    - ipa: /diː ˈtsviːbəl/
+      category: standard
+  level: 484
+- phrase: Die Zwiebel riecht stark
+  emoji: 🧅
+  ipas:
+    - ipa: /diː ˈtsviːbəl ʁiːçt ʃtaʁk/
+      category: standard
+  level: 572
+- phrase: Das Ei
+  emoji: 🥚
+  ipas:
+    - ipa: /das aɪ̯/
+      category: standard
+  level: 743
+- phrase: Das Ei ist rund
+  emoji: 🥚
+  ipas:
+    - ipa: /das aɪ̯ ɪst ʁʊnt/
+      category: standard
+  level: 810
+- phrase: Die Waffel
+  emoji: 🧇
+  ipas:
+    - ipa: /diː ˈvafəl/
+      category: standard
+  level: 463
+- phrase: Die Waffel ist warm
+  emoji: 🧇
+  ipas:
+    - ipa: /diː ˈvafəl ɪst vaʁm/
+      category: standard
+  level: 470
+- phrase: Die Erdnuss
+  emoji: 🥜
+  ipas:
+    - ipa: /diː ˈeːɐ̯tnʊs/
+      category: standard
+  level: 484
+- phrase: Die Erdnuss ist lecker
+  emoji: 🥜
+  ipas:
+    - ipa: /diː ˈeːɐ̯tnʊs ɪst ˈlɛkɐ/
+      category: standard
+  level: 713
+- phrase: Der Donut
+  emoji: 🍩
+  ipas:
+    - ipa: /deːɐ̯ ˈdoːnʊt/
+      category: standard
+  level: 831
+- phrase: Der Donut ist süß
+  emoji: 🍩
+  ipas:
+    - ipa: /deːɐ̯ ˈdoːnʊt ɪst zyːs/
+      category: standard
+  level: 843
+- phrase: Das Känguru
+  emoji: 🦘
+  ipas:
+    - ipa: /das ˈkɛŋɡuːʁu/
+      category: standard
+  level: 898
+- phrase: Das Känguru springt weit
+  emoji: 🦘
+  ipas:
+    - ipa: /das ˈkɛŋɡuːʁu ʃpʁɪŋt vaɪ̯t/
+      category: standard
+  level: 926
+- phrase: Das Krokodil
+  emoji: 🐊
+  ipas:
+    - ipa: /das kʁokoˈdiːl/
+      category: standard
+  level: 917
+- phrase: Das Krokodil schnappt zu
+  emoji: 🐊
+  ipas:
+    - ipa: /das kʁokoˈdiːl ʃnapt tsuː/
+      category: standard
+  level: 926
+- phrase: Der Hai
+  emoji: 🦈
+  ipas:
+    - ipa: /deːɐ̯ haɪ̯/
+      category: standard
+  level: 764
+- phrase: Der Hai schwimmt schnell
+  emoji: 🦈
+  ipas:
+    - ipa: /deːɐ̯ haɪ̯ ʃvɪmt ʃnɛl/
+      category: standard
+  level: 896
+- phrase: Der Papagei
+  emoji: 🦜
+  ipas:
+    - ipa: /deːɐ̯ papaˈɡaɪ̯/
+      category: standard
+  level: 898
+- phrase: Der Papagei redet viel
+  emoji: 🦜
+  ipas:
+    - ipa: /deːɐ̯ papaˈɡaɪ̯ ˈʁeːdət fiːl/
+      category: standard
+  level: 919
+- phrase: Der Flamingo
+  emoji: 🦩
+  ipas:
+    - ipa: /deːɐ̯ flaˈmɪŋɡo/
+      category: standard
+  level: 917
+- phrase: Der Flamingo ist rosa
+  emoji: 🦩
+  ipas:
+    - ipa: /deːɐ̯ flaˈmɪŋɡo ɪst ˈʁoːza/
+      category: standard
+  level: 910
+- phrase: Der Pfau
+  emoji: 🦚
+  ipas:
+    - ipa: /deːɐ̯ pfaʊ̯/
+      category: standard
+  level: 783
+- phrase: Der Pfau ist bunt
+  emoji: 🦚
+  ipas:
+    - ipa: /deːɐ̯ pfaʊ̯ ɪst bʊnt/
+      category: standard
+  level: 829
+- phrase: Die Gitarre
+  emoji: 🎸
+  ipas:
+    - ipa: /diː ɡiˈtaʁə/
+      category: standard
+  level: 512
+- phrase: Die Gitarre klingt schön
+  emoji: 🎸
+  ipas:
+    - ipa: /diː ɡiˈtaʁə klɪŋt ʃøːn/
+      category: standard
+  level: 732
+- phrase: Das Schlagzeug
+  emoji: 🥁
+  ipas:
+    - ipa: /das ˈʃlaːktsɔɪ̯k/
+      category: standard
+  level: 926
+- phrase: Das Schlagzeug macht Lärm
+  emoji: 🥁
+  ipas:
+    - ipa: /das ˈʃlaːktsɔɪ̯k maxt lɛʁm/
+      category: standard
+  level: 919
+- phrase: Die Trompete
+  emoji: 🎺
+  ipas:
+    - ipa: /diː tʁɔmˈpeːtə/
+      category: standard
+  level: 533
+- phrase: Die Trompete klingt laut
+  emoji: 🎺
+  ipas:
+    - ipa: /diː tʁɔmˈpeːtə klɪŋt laʊ̯t/
+      category: standard
+  level: 732
+- phrase: Die Geige
+  emoji: 🎻
+  ipas:
+    - ipa: /diː ˈɡaɪ̯ɡə/
+      category: standard
+  level: 445
+- phrase: Die Geige klingt schön
+  emoji: 🎻
+  ipas:
+    - ipa: /diː ˈɡaɪ̯ɡə klɪŋt ʃøːn/
+      category: standard
+  level: 699
+- phrase: Der Regenschirm
+  emoji: ☂️
+  ipas:
+    - ipa: /deːɐ̯ ˈʁeːɡənˌʃɪʁm/
+      category: standard
+  level: 975
+- phrase: Der Regenschirm schützt vor Regen
+  emoji: ☂️
+  ipas:
+    - ipa: /deːɐ̯ ˈʁeːɡənˌʃɪʁm ʃʏtst foːɐ̯ ˈʁeːɡən/
+      category: standard
+  level: 975
+- phrase: Der Magnet
+  emoji: 🧲
+  ipas:
+    - ipa: /deːɐ̯ maɡˈneːt/
+      category: standard
+  level: 850
+- phrase: Der Magnet zieht Eisen an
+  emoji: 🧲
+  ipas:
+    - ipa: /deːɐ̯ maɡˈneːt tsiːt ˈaɪ̯zən an/
+      category: standard
+  level: 903
+- phrase: Das Teleskop
+  emoji: 🔭
+  ipas:
+    - ipa: /das teləˈskoːp/
+      category: standard
+  level: 917
+- phrase: Das Teleskop zeigt die Sterne
+  emoji: 🔭
+  ipas:
+    - ipa: /das teləˈskoːp tsaɪ̯kt diː ˈʃtɛʁnə/
+      category: standard
+  level: 790
+- phrase: Der Teddybär
+  emoji: 🧸
+  ipas:
+    - ipa: /deːɐ̯ ˈtɛdiˌbɛːɐ̯/
+      category: standard
+  level: 889
+- phrase: Der Teddybär ist weich
+  emoji: 🧸
+  ipas:
+    - ipa: /deːɐ̯ ˈtɛdiˌbɛːɐ̯ ɪst vaɪ̯ç/
+      category: standard
+  level: 891
+- phrase: Das Zelt
+  emoji: ⛺
+  ipas:
+    - ipa: /das tsɛlt/
+      category: standard
+  level: 783
+- phrase: Das Zelt steht im Wald
+  emoji: ⛺
+  ipas:
+    - ipa: /das tsɛlt ʃteːt ɪm valt/
+      category: standard
+  level: 857
+- phrase: Der Hubschrauber
+  emoji: 🚁
+  ipas:
+    - ipa: /deːɐ̯ ˈhuːpˌʃʁaʊ̯bɐ/
+      category: standard
+  level: 995
+- phrase: Der Hubschrauber fliegt hoch
+  emoji: 🚁
+  ipas:
+    - ipa: /deːɐ̯ ˈhuːpˌʃʁaʊ̯bɐ fliːɡt hoːx/
+      category: standard
+  level: 963
+- phrase: Die Rakete
+  emoji: 🚀
+  ipas:
+    - ipa: /diː ʁaˈkeːtə/
+      category: standard
+  level: 494
+- phrase: Die Rakete fliegt ins All
+  emoji: 🚀
+  ipas:
+    - ipa: /diː ʁaˈkeːtə fliːɡt ɪns al/
+      category: standard
+  level: 584
