--- a/phrases-en.yaml
+++ b/phrases-en.yaml
@@ -2622,3 +2622,207 @@
     - ipa: /ˈzɪəɹəʊ/
       category: standard
   level: 277
+- phrase: watermelon
+  emoji: 🍉
+  ipas:
+    - ipa: /ˈwɔː.tə.mɛl.ən/
+      category: standard
+  level: 1000
+- phrase: egg
+  emoji: 🥚
+  ipas:
+    - ipa: /ɛɡ/
+      category: standard
+  level: 87
+- phrase: waffle
+  emoji: 🧇
+  ipas:
+    - ipa: /ˈwɒf.əl/
+      category: standard
+  level: 1000
+- phrase: donut
+  emoji: 🍩
+  ipas:
+    - ipa: /ˈdəʊ.nʌt/
+      category: standard
+  level: 1000
+- phrase: kangaroo
+  emoji: 🦘
+  ipas:
+    - ipa: /ˌkæŋ.ɡəˈruː/
+      category: standard
+  level: 591
+- phrase: flamingo
+  emoji: 🦩
+  ipas:
+    - ipa: /fləˈmɪŋ.ɡəʊ/
+      category: standard
+  level: 1000
+- phrase: magnet
+  emoji: 🧲
+  ipas:
+    - ipa: /ˈmæɡ.nɪt/
+      category: standard
+  level: 1000
+- phrase: teddy bear
+  emoji: 🧸
+  ipas:
+    - ipa: /ˈtɛd.i bɛː/
+      category: standard
+  level: 772
+- phrase: tent
+  emoji: ⛺
+  ipas:
+    - ipa: /tɛnt/
+      category: standard
+  level: 226
+- phrase: The kiwi is green
+  emoji: 🥝
+  ipas:
+    - ipa: /ðə ˈkiː.wi ɪz ɡɹiːn/
+      category: standard
+  level: 819
+- phrase: The watermelon is big
+  emoji: 🍉
+  ipas:
+    - ipa: /ðə ˈwɔː.tə.mɛl.ən ɪz bɪɡ/
+      category: standard
+  level: 1000
+- phrase: The egg is round
+  emoji: 🥚
+  ipas:
+    - ipa: /ðɪ ɛɡ ɪz ɹaʊnd/
+      category: standard
+  level: 1000
+- phrase: The waffle is warm
+  emoji: 🧇
+  ipas:
+    - ipa: /ðə ˈwɒf.əl ɪz wɔːm/
+      category: standard
+  level: 1000
+- phrase: The donut is sweet
+  emoji: 🍩
+  ipas:
+    - ipa: /ðə ˈdəʊ.nʌt ɪz swiːt/
+      category: standard
+  level: 1000
+- phrase: The kangaroo jumps far
+  emoji: 🦘
+  ipas:
+    - ipa: /ðə ˌkæŋ.ɡəˈruː dʒʌmps fɑː/
+      category: standard
+  level: 1000
+- phrase: The crocodile is big
+  emoji: 🐊
+  ipas:
+    - ipa: /ðə ˈkɹɒk.ə.daɪl ɪz bɪɡ/
+      category: standard
+  level: 1000
+- phrase: The flamingo is pink
+  emoji: 🦩
+  ipas:
+    - ipa: /ðə fləˈmɪŋ.ɡəʊ ɪz pɪŋk/
+      category: standard
+  level: 1000
+- phrase: The shark swims fast
+  emoji: 🦈
+  ipas:
+    - ipa: /ðə ʃɑːk swɪmz fɑːst/
+      category: standard
+  level: 826
+- phrase: The parrot talks a lot
+  emoji: 🦜
+  ipas:
+    - ipa: /ðə ˈpær.ət tɔːks ə lɒt/
+      category: standard
+  level: 1000
+- phrase: The peacock is colourful
+  emoji: 🦚
+  ipas:
+    - ipa: /ðə ˈpiː.kɒk ɪz ˈkʌl.ə.fəl/
+      category: standard
+  level: 1000
+- phrase: The guitar sounds great
+  emoji: 🎸
+  ipas:
+    - ipa: /ðə ɡɪˈtɑː saʊndz ɡɹeɪt/
+      category: standard
+  level: 908
+- phrase: The drum is loud
+  emoji: 🥁
+  ipas:
+    - ipa: /ðə dɹʌm ɪz laʊd/
+      category: standard
+  level: 765
+- phrase: The trumpet is loud
+  emoji: 🎺
+  ipas:
+    - ipa: /ðə ˈtɹʌm.pɪt ɪz laʊd/
+      category: standard
+  level: 841
+- phrase: The violin sounds great
+  emoji: 🎻
+  ipas:
+    - ipa: /ðə vaɪəˈlɪn saʊndz ɡɹeɪt/
+      category: standard
+  level: 911
+- phrase: The umbrella keeps you dry
+  emoji: ☂️
+  ipas:
+    - ipa: /ðə ʌmˈbɹɛl.ə kiːps jə dɹaɪ/
+      category: standard
+  level: 1000
+- phrase: The magnet pulls iron
+  emoji: 🧲
+  ipas:
+    - ipa: /ðə ˈmæɡ.nɪt pʊlz ˈaɪ.ən/
+      category: standard
+  level: 1000
+- phrase: The telescope shows stars
+  emoji: 🔭
+  ipas:
+    - ipa: /ðə ˈtɛl.ɪ.skəʊp ʃəʊz stɑːz/
+      category: standard
+  level: 1000
+- phrase: The teddy bear is soft
+  emoji: 🧸
+  ipas:
+    - ipa: /ðə ˈtɛd.i bɛː ɪz sɒft/
+      category: standard
+  level: 918
+- phrase: The tent stands in the woods
+  emoji: ⛺
+  ipas:
+    - ipa: /ðə tɛnt stændz ɪn ðə wʊdz/
+      category: standard
+  level: 1000
+- phrase: The helicopter flies high
+  emoji: 🚁
+  ipas:
+    - ipa: /ðə ˈhɛl.ɪ.kɒp.tə flaɪz haɪ/
+      category: standard
+  level: 962
+- phrase: The rocket flies high
+  emoji: 🚀
+  ipas:
+    - ipa: /ðə ˈɹɒk.ɪt flaɪz haɪ/
+      category: standard
+  level: 867
+- phrase: The broccoli is healthy
+  emoji: 🥦
+  ipas:
+    - ipa: /ðə ˈbɹɒk.ə.li ɪz ˈhɛl.θi/
+      category: standard
+  level: 930
+- phrase: The onion smells strong
+  emoji: 🧅
+  ipas:
+    - ipa: /ðɪ ˈʌn.jən smɛlz stɹɒŋ/
+      category: standard
+  level: 895
+- phrase: The peanut is tasty
+  emoji: 🥜
+  ipas:
+    - ipa: /ðə ˈpiː.nʌt ɪz ˈteɪs.ti/
+      category: standard
+  level: 854
