--- a/tests/data/de-DE/Der_Junge/Der_Junge-Thomas.flac.yaml
+++ b/tests/data/de-DE/Der_Junge/Der_Junge-Thomas.flac.yaml
@@ -2,5 +2,5 @@ phrase: Der Junge
 lang: de
 source: Thomas
 timestamp: 20260215T205246
-recognized_ipa: eaɪtʊŋ
-similarity: 0.8
+recognized_ipa: teaɪtʊŋ
+similarity: 0.82
