--- a/tests/data/de-DE/Die_Maus/Die_Maus-guettli.flac.yaml
+++ b/tests/data/de-DE/Die_Maus/Die_Maus-guettli.flac.yaml
@@ -2,5 +2,5 @@ phrase: Die Maus
 lang: de
 source: guettli
 timestamp: 20260224T052812
-recognized_ipa: imaʊs
-similarity: 0.91
+recognized_ipa: dimaʊs
+similarity: 0.99
