--- a/tests/data/en-GB/baggage/baggage-guettli.flac.yaml
+++ b/tests/data/en-GB/baggage/baggage-guettli.flac.yaml
@@ -2,5 +2,5 @@ phrase: baggage
 lang: en-GB
 source: guettli
 timestamp: 20260301T062532
-recognized_ipa: bkədʒ
-similarity: 0.83
+recognized_ipa: bɛkədʒ
+similarity: 0.81
